# finetune-liquild-vlm

./: .env.example  .env.sample  .gitignore  Makefile  README.md  pyproject.toml
configs/: eval_lfm_3B.yaml  eval_lfm_3B_checkpoint_1000.yaml  eval_lfm_3B_finetuned.yaml  eval_lfm_450m.yaml  finetune_lfm_3B.yaml  finetune_lfm_3B_full.yaml
notebooks/: visualize_evals.ipynb
scripts/: upload_dataset_to_hf.py
src/ft_vlm/: __init__.py
src/ft_vlm/cli/: __init__.py  evaluate.py  train.py
src/ft_vlm/core/: __init__.py  inference.py
src/ft_vlm/data/: __init__.py  data_preparation.py  loaders.py
src/ft_vlm/evaluation/: __init__.py  report.py
src/ft_vlm/infrastructure/: __init__.py  modal.py
src/ft_vlm/models/: __init__.py  output_types.py
src/ft_vlm/settings/: __init__.py  paths.py  training_config.py
src/ft_vlm/training/: __init__.py
src/ft_vlm/utils/: __init__.py
tests/: __init__.py  test_config.py  test_data_loaders.py  test_modal_infrastructure.py  test_paths.py  test_wandb_credentials.py
